--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>前端经验积累</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="lib/jquery.js"></script>
 </head>
 <body>
     <h2>前端经验的积累</h2>
@@ -10,5 +12,10 @@
         <p>每天都积累一点点，每天都学习一点点。</p>
         <p>不积跬步,无以至千里;不积小流,无以成江海。</p>
     </div>
+    <div>
+        <button id="fn1" type="button" class="btn btn-primary">防抖</button>
+        <button id="fn2" type="button" class="btn btn-primary">节流</button>
+    </div>
+    <script src="js/little.js"></script>
 </body>
 </html>
